# htmx-flask

./: .aider.conf.yml  .gitignore  Makefile  REQUIREMENTS.md  pyproject.toml
app/: __init__.py  domain.py  routes.py
app/templates/: base.j2.html  index.j2.html
app/templates/fragments/: _todo_form.j2.html  _todo_list.j2.html
tests/: test_routes.py
wireframes/: index.html
